// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render TeamsSummary with 1 team 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      team
       totalling 
      <span>
        $2.35
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Team
      </Link>
    </div>
  </div>
</div>
`;

exports[`should correctly render TeamsSummary with multiple teams 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        23
      </span>
       
      teams
       totalling 
      <span>
        $235,123,409.87
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Team
      </Link>
    </div>
  </div>
</div>
`;
